--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,6 +104,7 @@
                 android:hint="mmol/l"
                 android:numeric="decimal"
                 android:imeOptions="actionDone"
+                android:layout_weight="0.5"
                 android:id="@+id/triglycerides_mmol" />
 
             <EditText
@@ -114,6 +115,7 @@
                 android:hint="mg/dl"
                 android:numeric="decimal"
                 android:imeOptions="actionDone"
+                android:layout_weight="0.5"
                 android:id="@+id/triglycerides_mg" />
         </LinearLayout>
 
@@ -137,6 +139,7 @@
                 android:hint="mmol/l"
                 android:numeric="decimal"
                 android:imeOptions="actionDone"
+                android:layout_weight="0.5"
                 android:id="@+id/hemoglobin_mmol" />
 
             <EditText
@@ -147,6 +150,7 @@
                 android:hint="g/dl"
                 android:numeric="decimal"
                 android:imeOptions="actionDone"
+                android:layout_weight="0.5"
                 android:id="@+id/hemoglobin_mg" />
         </LinearLayout>
 
@@ -170,6 +174,7 @@
                 android:hint="mmol/l"
                 android:numeric="decimal"
                 android:imeOptions="actionDone"
+                android:layout_weight="0.5"
                 android:id="@+id/creatinine_mmol" />
 
             <EditText
@@ -180,6 +185,7 @@
                 android:hint="mmol/l"
                 android:numeric="decimal"
                 android:imeOptions="actionDone"
+                android:layout_weight="0.5"
                 android:id="@+id/creatinine_mg" />
         </LinearLayout>
 
