--- a/app/src/main/res/layout/fragment_basic_calculation.xml
+++ b/app/src/main/res/layout/fragment_basic_calculation.xml
@@ -167,7 +167,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:ems="10"
-                android:hint="mmol/l"
+                android:hint="umol/l"
                 android:numeric="decimal"
                 android:imeOptions="actionDone"
                 android:layout_weight="0.5"
@@ -178,7 +178,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:ems="10"
-                android:hint="mmol/l"
+                android:hint="mg/dl"
                 android:numeric="decimal"
                 android:imeOptions="actionDone"
                 android:layout_weight="0.5"
